# YOLO-Fish

./: .gitignore  CMakeLists.txt  README.md  build.sh  darkhelp_images.cpp  darkhelp_to_roboflow.cpp  darkhelp_video.cpp  evaluate_map.py  example_scripts.sh  requirements.txt  select_frames.py
output/: official00011_png.rf.5dbddbe11615d755e13fc867e3ae47d5.txt  official00016_png.rf.db5853712ddf8ebd6a479a5869e0a57f.txt  official00018_png.rf.3654118a784730842edf3dd44f2347d0.txt  official00027_png.rf.99f22a993ea82cce2bafde06839a9209.txt  official00033_png.rf.258ed44ffd8e84c65cef2f026d4ecb35.txt  official00042_png.rf.c359fc155830f619a27f3fd321d5b8f7.txt  official00050_png.rf.2dd20193c306a2b78ca228c733141e41.txt  official00056_png.rf.41bc938f32bde3ed35c0e17a3d3aa02a.txt  official00058_png.rf.4da257483b45355ded931d242ae8866a.txt  official00065_png.rf.cd260253d1ab1a225ca276a51d68c803.txt  official00068_png.rf.118fcdb3bf351272ddacc6d7d9e1dd09.txt  official00069_png.rf.13fa577817e63017a09a6bb12010e06c.txt  official00072_png.rf.e1e5d378e2b85469a5b465025fb8ae98.txt  official00073_png.rf.859d1a1ea800061919b58b136f40d3da.txt  official00075_png.rf.04fe8583b752482f04f58406bb9a7c70.txt  official00076_png.rf.622c9f8b97c93b90d426573e66085be5.txt  official00079_png.rf.97509d814c3d2929f15f7d1e0e85afca.txt  official00081_png.rf.dad75b99c18603d0d6cace05affd852f.txt  official00093_png.rf.a1dd6e8981615d69e2b25c1f31405a43.txt  official00100_png.rf.d3b8ab5bf3fa9a2dddec470e0a8d6cc0.txt  official00102_png.rf.45e3ed327a8cd9efc13d5f8f286dfd1f.txt  (+1 more)
weights/: readme.md
